[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
tabled = { version = "0.18.0", features = ["derive"] }
chrono = "0.4.39"
